# devtools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  mkdocs-pages.yml
configs/: .pre-commit-config.yaml
src/configs/: ruff.toml
src/devtools/: __init__.py  cli.py  docs.py
src/devtools/configs/: mkdics.base.yml  mkdocs.base.yml  mypy.ini
